# futher-mcp

./: .env.example  .gitignore  LICENSE  README.md  docs  further-mcp.pack.json  main.py  manifest.json  pyproject.toml  railway.json  requirements.txt
src/further_mcp/: __init__.py  discovery.py  fastapi_server.py  mcp_server.py  models.py  pipeline.py  providers.py
src/further_mcp/tools/: __init__.py  ebook_helper.py  logger_config.py  pdf_helper.py
tests/: test_discovery.py  test_fastapi_server.py  test_mcp_server.py  test_providers.py
